@@ -4,14 +4,12 @@ package com.project.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
 import com.project.data.RoleData;
 import com.project.data.UserData;
 import com.project.dto.UserDto;
 import com.project.repository.RoleRepository;
 import com.project.repository.UserRepository;
-
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -28,7 +26,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void saveUser(UserDto userDto) {
         RoleData role = roleRepository.findByName("ROLE_USER");
-        UserData user = new UserData(userDto.getName(), userDto.getEmail(), passwordEncoder.encode(userDto.getPassword()), Arrays.asList(role));
+        UserData user = new UserData(userDto.getName(), userDto.getEmail(), passwordEncoder.encode(userDto.getPassword()), List.of(role));
         userRepository.save(user);
     }
 
